<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/buttons"
        android:padding="@dimen/button_margin"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nine"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/nine"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/eight"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/eight"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/seven"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/seven"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/divide"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/divide"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/six"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/six"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/five"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/five"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/four"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/four"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/multiply"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/multiply"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/three"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/three"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/two"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/two"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/one"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/one"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/diff"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/diff"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:orientation="horizontal">

            <Button
                android:id="@+id/zero"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/zero"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/clear"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/clear"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/equals"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/equals"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

            <Button
                android:id="@+id/sum"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/sum"
                android:textSize="@dimen/button_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/button" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_above="@id/buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/result"
            android:textAlignment="textEnd"
            android:background="#cccccc"
            android:textSize="35sp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

        <TextView
            android:id="@+id/input"
            android:textAlignment="textEnd"
            android:background="#cccccc"
            android:textSize="25sp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp" />

    </LinearLayout>

</RelativeLayout>